# Earthquake-Engine

./: .gitignore  CMakeLists.txt  README.md  config.cfg  editor_layout.txt  file-specifications.md  imgui.ini  run.bat  todo.md
app/: demo_layer.c  demo_layer.h  main.c
core/: core.c  core.h  layer.h
core/managers/: asset_manager.h  cvar.c  cvar.h  window_manager.c  window_manager.h
core/managers/asset_manager/: asset_manager.c  asset_manager.h  asset_types.h
core/managers/asset_manager/asset_types/: image.h  material.c  material.h  model.c  model.h  scene.h
core/managers/asset_manager/loaders/: asset_image.c  asset_image.h  asset_image_itex.c  asset_image_itex.h  asset_material.c  asset_material.h  asset_model.h  asset_model_3mf.c  asset_model_3mf.h  asset_model_fbx.c  asset_model_fbx.h  asset_model_gltf.c  asset_model_gltf.h  asset_model_imesh.c  asset_model_imesh.h  asset_model_ply.c  asset_model_ply.h  asset_model_stl.c  asset_model_stl.h  asset_scene_yaml.c  asset_scene_yaml.h  image_mips.c  image_mips.h  loader_util.h  register_modules.h
core/net/: .todo  server.c  server.h  sv_net.c  sv_net.h  sv_packet_decl.h  sv_utils.c  sv_utils.h
core/renderer/: bloom.c  bloom.h  camera.h  frame_graph.c  frame_graph.h  gl_state_cache.c  gl_state_cache.h  ibl.c  ibl.h  light.h  material.c  material.h  model.c  model.h  renderer.c  renderer.h  shader.c  shader.h  ssr.c  ssr.h
core/systems/: event.h  iKv1.c  iKv1.h  model_lod.c  model_lod.h
core/systems/ecs/: component.c  component.h  ecs.h  ecs_types.h  entity.c  entity.h  internal.h  pool.c  pool.h  scene_yaml.c  scene_yaml.h  serialize.c  serialize.h  view.c  view.h  world.c  world.h
core/systems/ecs/components/: c_light.c  c_light.h  c_mesh_renderer.c  c_mesh_renderer.h  c_tag.c  c_tag.h  c_transform.c  c_transform.h
core/systems/scene_renderer/: scene_renderer.c  scene_renderer.h
core/types/: handle.c  handle.h  mat4.c  mat4.h  uvec2.h  uvec3.h  uvec4.h  vec2.h  vec2i.h  vec3.c  vec3.h  vec3i.h  vec4.h  vec4i.h  vector.c  vector.h
core/ui/: ui.c  ui.h  ui_backend.h  ui_commands.c  ui_commands.h  ui_demo.c  ui_demo.h  ui_events.h  ui_font.c  ui_font.h  ui_hash.c  ui_hash.h  ui_layout.c  ui_layout.h  ui_popup.c  ui_popup.h  ui_types.h  ui_widgets.c  ui_widgets.h  ui_window.c  ui_window.h
core/ui/backends/: opengl_backend.c  opengl_backend.h
core/utils/: hsv_to_rgb.h  logger.c  logger.h  macros.h  strdup.h  threads.c  threads.h  title_builder.h
editor/: CEditorContext.h  OrbitCamera.h  editor_layer.c  editor_layer.cpp  editor_layer.h
editor/systems/: CEditorProjectManager.cpp  CEditorProjectManager.h  CEditorSceneManager.cpp  CEditorSceneManager.h
editor/utils/: CAssetManager.cpp  CAssetManager.h  themes.cpp  themes.h
editor/windows/: CAssetBrowserWindow.cpp  CAssetBrowserWindow.h  CAssetManagerWindow.cpp  CAssetManagerWindow.h  CBaseWindow.h  CEntityInspectorWindow.cpp  CEntityInspectorWindow.h  CSceneViewerWindow.cpp  CSceneViewerWindow.h  CStatsWindow.cpp  CStatsWindow.h  CTextureStreamingWindow.cpp  CTextureStreamingWindow.h  CViewPortWindow.h
res/shaders/: auto_exposure_reduce_buf.comp  auto_exposure_reduce_tex.comp  bloom_blur_h.frag  bloom_blur_v.frag  bloom_down.frag  bloom_downsample.frag  bloom_extract.frag  bloom_up.frag  bloom_upsample.frag  deferred_light.frag  deferred_light.vert  fs_tri.vert  gbuffer.frag  gbuffer.vert  ibl_brdf_lut.frag  ibl_equirect_to_cube.frag  ibl_irradiance_convolve.frag  ibl_prefilter_env.frag  line3d.frag  line3d.vert  post_present.frag  present.frag  present.vert  quad3d.frag  quad3d.vert  shader.frag  shader.vert  sky.frag  sky.vert  ssr.frag
res/shaders/Forward/: Forward.frag  Forward.vert  depth.frag  depth.vert  fp_cull.comp  fp_finalize.comp  fp_init.comp  shadow.frag
res/shaders/PathTrace/: bvh_build.comp  bvh_morton.comp  bvh_refit.comp  pathtrace.comp  pathtrace_finalize.comp
